ProjectAdapter SPI: source-comment docs + JDK/maven dual adapters (#14)
* feat: extract API docs from JDK source javadoc comments, no HTML download needed

- add SourceDocExtractor: class/method-level docs from javadoc comments
  (description + @param/@return/@throws/@apiNote, inline tags cleaned)
- add SourceTreeIndex: shared source tree index (package path -> file),
  replaces per-lookup 'find' subprocess; prefer share/classes on conflicts
- add QdoxUtil: reliable nested-class lookup (getClassByName returns
  empty placeholders for unknown names)
- rewrite ApiInfoProcessor matching: multi-level signature match
  (FQN -> simple name -> arity), generics erasure, varargs, inner classes,
  super/interface fallback; docs now source-first, HTML only as fallback
  for build-time generated classes (e.g. ByteBuffer)
- SimplifiedJavaDocSearchTool: serve docs from source comments first,
  keep tool name/params for zero prompt changes; HTML fallback retained
- InformationCollectionAgent passes sourcePath into the doc search tool
- JavaDoc download becomes optional (README updated)

* refactor: introduce ProjectAdapter SPI, move JDK-specific logic behind it

Step toward supporting generic Java projects (Maven/JUnit repos) alongside
the JDK/jtreg scenario, which stays as a first-class adapter.

- add ProjectAdapter interface: test discovery, execution, environment
- add JdkProjectAdapter: jtreg discovery (jtreg -l + dir-scan fallback),
  multi-JDK differential execution, env checks (moved verbatim from
  TestSuite/TestExecutor)
- add HarnessOutputParser + JtregOutputParser (moved from TestOutput)
- add AdapterRegistry selecting adapter via new 'project.type' config
  (default 'jdk'); unknown types fail fast
- TestExecutor/TestSuite become thin facades, public API unchanged;
  callers (TestCase/CommandHandler/TestExecutionManager/BugVerify) untouched
- add regression safety net before/independent of the move:
  real-output jtreg parsing tests, exit-code/merge classification test